--- a/index.html
+++ b/index.html
@@ -317,8 +317,8 @@
 
               <div class="phone">
                 <i class="bi bi-phone"></i>
-                <h4>Call:</h4>
-                <p>+977 9869714340</p>
+                <h4>Phone No:</h4>
+                <p>+977 98XXXXXXXX</p>
               </div>
 
             </div>
