--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
             <div class="row">
               <div class="col-lg-6">
                 <ul>
-                  <li><i class="bi bi-chevron-right"></i> <strong>Birthday:</strong> <span>2002 May 05</span></li>
+                  <li><i class="bi bi-chevron-right"></i> <strong>DOB:</strong> <span>2002 May 05</span></li>
                   <li><i class="bi bi-chevron-right"></i> <strong>Phone:</strong> <span>+977 9869714340</span></li>
                   <li><i class="bi bi-chevron-right"></i> <strong>City:</strong> <span>Mahendranagar, Nepal</span></li>
                 </ul>
@@ -102,7 +102,7 @@
               <div class="col-lg-6">
                 <ul>
                   <li><i class="bi bi-chevron-right"></i> <strong>Age:</strong> <span>22</span></li>
-                  <li><i class="bi bi-chevron-right"></i> <strong>Degree:</strong> <span>Undergraduate</span></li>
+                  <li><i class="bi bi-chevron-right"></i> <strong>Education:</strong> <span>Undergraduate</span></li>
                   <li><i class="bi bi-chevron-right"></i> <strong>Email:</strong> <span>official.dhirajpant@gmail.com</span></li>
                 </ul>
               </div>
