--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
 
         <div class="row">
           <div class="col-lg-4">
-            <img src="assets/img/dhiraj.jpg" class="img-fluid" alt="">
+            <img src="assets/img/dhirajpant.png" class="img-fluid" alt="">
           </div>
           <div class="col-lg-8 pt-4 pt-lg-0 content">
             <h3> AI/Ml Expert</h3>
